--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://przemyslawzydek.com/*"],
       "js": ["content.js"]
     }
   ],
@@ -25,12 +25,5 @@
     "browsingData",
     "background",
     "scripting"
-  ],
-  "host_permissions": ["*://*/*"],
-  "web_accessible_resources": [
-    {
-      "resources": ["*.js", "*.json", "*.map"],
-      "matches": ["*://*/*"]
-    }
   ]
 }
