--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/webextension-polyfill": "^0.8.3",
+    "canvas": "^2.9.1",
     "copy-webpack-plugin": "^10.2.4",
     "dotenv": "^16.0.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.8",
+    "typescript": "4.6.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
-    "@fingerprintjs/fingerprintjs-pro": "^3.6.1"
+    "@fingerprintjs/fingerprintjs-pro": "^3.6.1",
+    "@fingerprintjs/fingerprintjs-pro-static": "file:../fingerprintjs-pro/packages/fingerprintjs-pro-static",
+    "webextension-polyfill": "0.9.0"
   }
 }
