--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "canvas": "^2.9.1",
     "copy-webpack-plugin": "^10.2.4",
     "dotenv": "^16.0.0",
+    "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.8",
