feat: Store extension ids as env variable

--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,4 @@
 API_KEY=<YOUR_API_KEY>
 WEBSITE_URL=https://fingerprintjs.github.io/fingerprintjs-pro-chrome-extension-example/*
+# Extension IDs separated by comma
+EXTENSION_IDS=godljapfbfdimjjiknaefidkghojnahp
