--- a/package.json
+++ b/package.json
@@ -8,30 +8,30 @@
     "extension:zip": "cd packages/chrome-extension && yarn run zip",
     "extension:watch": "cd packages/chrome-extension && yarn run watch",
     "website:build": "cd packages/website && yarn run build",
-    "webiste:start": "cd packages/website && yarn run start"
+    "website:start": "cd packages/website && yarn run start"
   },
-  "workspaces": ["packages/**"],
+  "workspaces": [
+    "packages/**"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@types/chrome": "0.0.181",
-    "@types/webextension-polyfill": "^0.8.3",
     "canvas": "^2.9.1",
-    "copy-webpack-plugin": "^10.2.4",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.4",
     "dotenv": "^16.0.0",
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.8",
     "typescript": "4.6.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1",
-    "terser-webpack-plugin": "^5.3.1"
+    "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
-    "@fingerprintjs/fingerprintjs-pro": "^3.6.1",
-    "webextension-polyfill": "0.9.0"
+    "@fingerprintjs/fingerprintjs-pro": "^3.6.1"
   }
 }
