--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "description": "Sample chrome extension that uses FingerprintJS pro agent.",
   "scripts": {
-    "build": "webpack -c webpack.config.js",
+    "build": "webpack -c webpack.config.js --mode production",
     "zip": "npm run build && cd build && zip -r ../build.zip *",
-    "watch": "webpack -c webpack.config.js --watch"
+    "watch": "webpack -c webpack.config.js --watch --mode development"
   }
 }
