chore: adjustments to extension and readme

--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,4 @@
-API_KEY=<YOUR_API_KEY>
-WEBSITE_URL=https://fingerprintjs.github.io/fingerprintjs-pro-chrome-extension-example/*
-# Extension IDs separated by comma
-EXTENSION_IDS=godljapfbfdimjjiknaefidkghojnahp
+API_KEY=<YOUR_FINGERPRINT_JS_PUBLIC_API_KEY>
+WEBSITE_URL=https://localhost:8080/
+# You can add here more than one extension ID by separating them with a comma
+EXTENSION_IDS=<YOUR_EXTENSION_ID>
