--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "extension:zip": "cd packages/chrome-extension && yarn run zip",
     "extension:watch": "cd packages/chrome-extension && yarn run watch",
     "website:build": "cd packages/website && yarn run build",
-    "website:start": "cd packages/website && yarn run start"
+    "website:start": "cd packages/website && yarn run start",
+    "build": "yarn website:build && yarn extension:build",
+    "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
+    "lint:fix": "yarn lint --fix"
   },
   "workspaces": [
     "packages/**"
@@ -17,12 +20,18 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chrome": "0.0.181",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "dotenv": "^16.0.0",
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.5.1",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.8",
     "typescript": "4.6.3",
