--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "extension:build": "cd packages/chrome-extension && yarn run build",
     "extension:zip": "cd packages/chrome-extension && yarn run zip",
     "extension:watch": "cd packages/chrome-extension && yarn run watch",
+    "extension:e2e": "cd packages/chrome-extension && yarn run e2e",
     "website:build": "cd packages/website && yarn run build",
     "website:start": "cd packages/website && yarn run start",
     "build": "yarn website:build && yarn extension:build",
@@ -22,12 +23,12 @@
     "@types/chrome": "0.0.181",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "dotenv": "^16.0.0",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
