--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install Node packages
         run: yarn install
 
+      - name: Create .env file
+        run: cp .env.dist .env
+
       - name: Lint
         run: yarn lint
 
@@ -33,8 +36,6 @@ jobs:
       - name: Lint
         run: yarn lint
 
-      - name: Run tests
-        run: yarn test
   chrome-extension-e2e:
     name: Chrome extension e2e tests
     runs-on: ubuntu-latest
@@ -61,4 +62,6 @@ jobs:
           API_KEY: ${{ secrets.API_KEY }}
 
       - name: Run tests
-        run: yarn extension:e2e
+        uses: GabrielBB/xvfb-action@v1
+        with:
+          run: yarn extension:e2e
