--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,8 +50,8 @@ jobs:
           key: nodemodules-${{ hashFiles('yarn.lock') }}
           restore-keys: nodemodules-
 
-      - name: Install Node packages
-        run: yarn install
+      - name: Install dependencies
+        run: yarn install && npx playwright install-deps
 
       - name: Create .env file
         run: cp .env.dist .env
