--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,6 @@
 name: Tests
 on:
-  push:
-    branches-ignore:
-      - main
-    paths-ignore:
-      - '**.md'
+  pull_request:
 
 jobs:
   test:
