--- a/packages/chrome-extension-e2e/package.json
+++ b/packages/chrome-extension-e2e/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "@types/jest": "^27.5.0",
     "@types/node-fetch": "^2.6.1",
-    "playwright": "^1.21.1",
+    "playwright": "*",
     "node-fetch": "^2.6.7",
     "jest": "^28.0.3",
     "ts-jest": "^28.0.1"
