--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.5.1",
+    "semantic-release": "^19.0.2",
+    "semantic-release-monorepo": "^7.0.5",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.8",
     "typescript": "4.6.3",
