--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -6,6 +6,15 @@
   "scripts": {
     "build": "webpack -c webpack.config.js --mode production",
     "zip": "npm run build && cd build && zip -r ../build.zip *",
-    "watch": "webpack -c webpack.config.js --watch --mode development"
+    "watch": "webpack -c webpack.config.js --watch --mode development",
+    "release": "semantic-release",
+    "release-dry": "semantic-release --dry-run"
+  },
+  "release": {
+    "extends": "semantic-release-monorepo",
+    "tagFormat": "chrome-extension-v${version}",
+    "branches": [
+      "main"
+    ]
   }
 }
