--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fingerprintjs-extension-website",
+  "name": "website",
   "version": "0.0.1",
   "private": true,
   "description": "",
@@ -19,6 +19,21 @@
     "tagFormat": "website-v${version}",
     "branches": [
       "main"
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "CHANGELOG.md",
+            "package.json"
+          ]
+        }
+      ],
+      "@semantic-release/github"
     ]
   }
 }
