--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "description": "Playground for browser extension integration",
   "scripts": {
-    "extension:build": "cd packages/chrome-extension && yarn run build",
-    "extension:zip": "cd packages/chrome-extension && yarn run zip",
-    "extension:watch": "cd packages/chrome-extension && yarn run watch",
-    "extension:e2e": "cd packages/chrome-extension-e2e && yarn run e2e",
-    "website:build": "cd packages/website && yarn run build",
-    "website:start": "cd packages/website && yarn run start",
+    "extension:build": "yarn workspace chrome-extension build",
+    "extension:zip": "yarn workspace chrome-extension zip",
+    "extension:watch": "yarn workspace chrome-extension watch",
+    "extension:e2e": "yarn workspace chrome-extension-e2e run e2e",
+    "extension:release": "yarn workspace chrome-extension release",
+    "website:build": "yarn workspace website build",
+    "website:start": "yarn workspace website start",
+    "website:release": "yarn workspace website release",
     "build": "yarn website:build && yarn extension:build",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
-    "lint:fix": "yarn lint --fix"
+    "lint:fix": "yarn lint --fix",
+    "release": "yarn website:release && yarn extension:release"
   },
   "workspaces": [
     "packages/**"
@@ -20,6 +23,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/chrome": "0.0.181",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
