--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -2,13 +2,15 @@ name: Deploy website
 
 on:
   workflow_dispatch:
-  create:
+  release:
+    types:
+      - published
 
 jobs:
   deploy-website:
     runs-on: ubuntu-latest
-    # Ensure that for "create" event we trigger this workflow only for the correct tag
-    if: ${{ github.event_name != 'create' || contains(github.ref, 'website-v') }}
+    # Ensure that for release event we trigger this workflow only for the correct tag
+    if: ${{ github.event_name != 'release' || contains(github.ref, 'website-v') }}
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
