--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -24,6 +24,7 @@ jobs:
         env:
           API_KEY: ${{ secrets.API_KEY }}
           EXTENSION_IDS: ${{ secrets.EXTENSION_IDS }}
+          API_ENDPOINT: ${{ secrets.API_ENDPOINT }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@8817a56e5bfec6e2b08345c81f4d422db53a2cdc
