--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@commitlint/config-conventional": "^16.2.4",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
+    "@types/adm-zip": "^0.5.0",
     "@types/chrome": "0.0.181",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "adm-zip": "^0.5.9",
     "clean-webpack-plugin": "^4.0.0",
     "commitizen": "^4.2.4",
     "copy-webpack-plugin": "^10.2.4",
