--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -26,7 +26,8 @@
         {
           "assets": [
             "CHANGELOG.md",
-            "package.json"
+            "package.json",
+            "manifest.json"
           ]
         }
       ],
