fix: use different command for syncing manifest version

--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -24,7 +24,7 @@
       [
         "@semantic-release/exec",
         {
-          "publishCmd": "yarn run sync-manifest-version"
+          "prepareCmd": "yarn run sync-manifest-version"
         }
       ],
       [
