--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -8,8 +8,7 @@
     "zip": "yarn run build && cd build && zip -r ../build.zip *",
     "watch": "webpack -c webpack.config.js --watch --mode development",
     "release": "semantic-release",
-    "release-dry": "semantic-release --dry-run",
-    "sync-manifest-version": "node ./scripts/syncManifestVersion.js"
+    "release-dry": "semantic-release --dry-run"
   },
   "release": {
     "extends": "semantic-release-monorepo",
@@ -20,20 +19,14 @@
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
       "@semantic-release/npm",
-      [
-        "@semantic-release/exec",
-        {
-          "prepareCmd": "yarn run sync-manifest-version"
-        }
-      ],
       [
         "@semantic-release/git",
         {
           "assets": [
             "CHANGELOG.md",
-            "package.json",
-            "manifest.json"
+            "package.json"
           ]
         }
       ],
