--- a/.github/workflows/publish-extension.yml
+++ b/.github/workflows/publish-extension.yml
@@ -27,9 +27,9 @@ jobs:
         run: yarn extension:zip
 
       - name: Upload extension
-        uses: mnao305/chrome-extension-upload@4061bc03cde1feaec8b153654495c88857fb76c3
-        with:
-          file-path: packages/chrome-extension/build.zip
-          extension-id: ${{ secrets.EXTENSION_ID }}
-          client-id: ${{ secrets.GOOGLE_CLIENT_ID }}
-          refresh-token: ${{ secrets.GOOGLE_REFRESH_TOKEN }}
+        run: yarn extension:publish
+        env:
+          EXTENSION_ID: ${{ secrets.EXTENSION_ID }}
+          CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          REFRESH_TOKEN: ${{ secrets.GOOGLE_REFRESH_TOKEN }}
