--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -8,7 +8,8 @@
     "zip": "yarn run build && cd build && zip -r ../build.zip *",
     "watch": "webpack -c webpack.config.js --watch --mode development",
     "release": "semantic-release",
-    "release-dry": "semantic-release --dry-run"
+    "release-dry": "semantic-release --dry-run",
+    "publish-to-store": "yarn run zip && node scripts/publish.mjs"
   },
   "release": {
     "extends": "semantic-release-monorepo",
@@ -32,5 +33,8 @@
       ],
       "@semantic-release/github"
     ]
+  },
+  "devDependencies": {
+    "chrome-webstore-upload": "^1.0.0"
   }
 }
