build: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ node_modules
 .env
 packages/chrome-extension-e2e/thirdPartyExtensions
 packages/chrome-extension-e2e/tests/contexts
+.idea
+
+**/.DS_Store
+**/report.xml
