test: add keep alive script

--- a/packages/chrome-extension/manifest.json
+++ b/packages/chrome-extension/manifest.json
@@ -11,12 +11,8 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": [
-        "content.js"
-      ]
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
     }
   ],
   "background": {
@@ -30,17 +26,11 @@
       "https://fingerprintjs.github.io/fingerprintjs-pro-chrome-extension-example/*"
     ]
   },
-  "permissions": [
-    "background"
-  ],
+  "permissions": ["background", "scripting"],
   "web_accessible_resources": [
     {
-      "resources": [
-        "assets/*"
-      ],
-      "matches": [
-        "*://*/*"
-      ]
+      "resources": ["assets/*"],
+      "matches": ["*://*/*"]
     }
   ],
   "version_name": "0.0.2"
