--- a/packages/chrome-extension-e2e/package.json
+++ b/packages/chrome-extension-e2e/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "description": "Stores e2e tests for chrome extension;",
   "scripts": {
-    "e2e": "jest --forceExit --runInBand"
+    "e2e": "npx playwright test --headed"
   },
   "devDependencies": {
+    "@playwright/test": "^1.22.0",
     "@types/jest": "^27.5.0",
     "@types/node-fetch": "^2.6.1",
-    "playwright": "*",
-    "node-fetch": "^2.6.7",
     "jest": "^28.0.3",
     "jest-junit": "13.2.0",
+    "node-fetch": "^2.6.7",
+    "playwright": "*",
     "ts-jest": "^28.0.1"
   }
 }
