--- a/packages/chrome-extension-e2e/tsconfig.json
+++ b/packages/chrome-extension-e2e/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "types": ["jest", "node", "chrome"]
+    "types": ["node", "chrome"]
   }
 }
