build: set env for deploy workflows

--- a/.github/workflows/publish-extension.yml
+++ b/.github/workflows/publish-extension.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   publish-extension:
+    environment: 'production'
     runs-on: ubuntu-latest
     # Ensure that for release event we trigger this workflow only for the correct tag
     if: ${{ github.event_name != 'release' || contains(github.ref, 'chrome-extension-v') }}
