--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install && yarn list
 
       - name: Setup playwright
         run: yarn upgrade --pattern playwright --pure-lockfile && npx playwright install-deps && npx playwright --version
