build: link ts-loader

--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
-    "chrome-webstore-upload": "^1.0.0"
+    "chrome-webstore-upload": "^1.0.0",
+    "ts-loader": "link:../../node_modules/ts-loader"
   }
 }
