--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -35,7 +35,6 @@
     ]
   },
   "devDependencies": {
-    "chrome-webstore-upload": "^1.0.0",
-    "ts-loader": "file:../../node_modules/ts-loader"
+    "chrome-webstore-upload": "^1.0.0"
   }
 }
