--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,10 @@
 name: Tests
 on:
-  pull_request:
+  push:
+    branches-ignore:
+      - main
   schedule:
     - cron: '0 0 * * *'
-
 jobs:
   test:
     name: Lint
