--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "module": "ES2020",
+    "types": ["vite/client", "chrome"]
+  },
   "exclude": [
     "dist",
     "node_modules",
