--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Create .env file
         run: |
           echo "API_KEY=${{ secrets.API_KEY }}" >> .env
+          echo "VITE_API_KEY=${{ secrets.API_KEY }}" >> .env
           echo "WEBSITE_URL=https://localhost:8080/" >> .env
           echo "API_ENDPOINT=${{ secrets.API_ENDPOINT }}" >> .env
 
