--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "extension:publish": "yarn workspace chrome-extension publish-to-store",
     "website:build": "yarn workspace website build",
     "website:start": "yarn workspace website start",
+    "website:preview": "yarn workspace website preview",
     "website:release": "yarn workspace website release",
     "build": "yarn website:build && yarn extension:build",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore --max-warnings 0 .",
@@ -54,6 +55,8 @@
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.4.2",
     "typescript": "5.0.4",
+    "vite": "^4.3.6",
+    "vite-plugin-mkcert": "^1.15.0",
     "webpack": "5.76.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
