build: use vite for building extension

--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,4 @@
-API_KEY=<YOUR_FINGERPRINT_JS_PUBLIC_API_KEY>
-WEBSITE_URL=https://localhost:8080/
+VITE_API_KEY=<YOUR_FINGERPRINT_JS_PUBLIC_API_KEY>
+VITE_WEBSITE_URL=https://localhost:8080/
 # You can add here more than one extension ID by separating them with a comma
-EXTENSION_IDS=<YOUR_EXTENSION_ID>
+VITE_EXTENSION_IDS=<YOUR_EXTENSION_ID>
