--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,10 +51,9 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo "API_KEY=${{ secrets.API_KEY }}" >> .env
           echo "VITE_API_KEY=${{ secrets.API_KEY }}" >> .env
-          echo "WEBSITE_URL=https://localhost:8080/" >> .env
-          echo "ADD_EXTENSION_ID_TO_URL=true" >> .env
+          echo "VITE_WEBSITE_URL=https://localhost:8080/" >> .env
+          echo "VITE_ADD_EXTENSION_ID_TO_URL=true" >> .env
 
       - name: Build extension
         run: yarn extension:build
