--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "description": "Sample chrome extension that uses FingerprintJS FingerprintJS Pro JavaScript agent.",
   "scripts": {
-    "build": "webpack -c webpack.config.js --mode production",
+    "build": "vite build",
     "zip": "yarn run build && cd build && zip -r ../build.zip *",
-    "watch": "webpack -c webpack.config.js --watch --mode development",
+    "watch": "vite build --watch",
     "release": "semantic-release",
     "release-dry": "semantic-release --dry-run",
     "publish-to-store": "yarn run zip && node scripts/publish.mjs"
