--- a/.github/workflows/publish-extension.yml
+++ b/.github/workflows/publish-extension.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install
 
       - name: Create .env file
         run: |
@@ -25,10 +25,10 @@ jobs:
           echo "WEBSITE_URL=${{ secrets.WEBSITE_URL }}" >> .env
 
       - name: Build extension
-        run: yarn extension:zip
+        run: pnpm extension:zip
 
       - name: Upload extension
-        run: yarn extension:publish
+        run: pnpm extension:publish
         env:
           EXTENSION_ID: ${{ secrets.EXTENSION_ID }}
           CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
