--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,20 +16,20 @@ jobs:
         uses: actions/cache@v3
         with:
           path: node_modules
-          key: nodemodules-${{ hashFiles('yarn.lock') }}
+          key: nodemodules-${{ hashFiles('pnpm.lock') }}
           restore-keys: nodemodules-
 
       - name: Install Node packages
-        run: yarn install
+        run: pnpm install
 
       - name: Create .env file
         run: cp .env.dist .env
 
       - name: Build
-        run: yarn build
+        run: pnpm build
 
       - name: Lint
-        run: yarn lint
+        run: pnpm lint
 
   chrome-extension-e2e:
     name: Chrome extension e2e tests
@@ -43,10 +43,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: yarn install && yarn list
+        run: pnpm install && pnpm list
 
       - name: Setup playwright
-        run: yarn upgrade --pattern playwright --pure-lockfile && npx playwright install-deps && npx playwright --version
+        run: pnpm upgrade --pattern playwright --pure-lockfile && npx playwright install-deps && npx playwright --version
 
       - name: Create .env file
         run: |
@@ -54,12 +54,12 @@ jobs:
           echo "WEBSITE_URL=https://localhost:8080/" >> .env
 
       - name: Build extension
-        run: yarn extension:build
+        run: pnpm extension:build
 
       - name: Run tests
         uses: GabrielBB/xvfb-action@86d97bde4a65fe9b290c0b3fb92c2c4ed0e5302d
         with:
-          run: yarn extension:e2e
+          run: pnpm extension:e2e
 
       - name: Upload trace
         if: always()
