--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -5,11 +5,11 @@
   "description": "Sample chrome extension that uses FingerprintJS FingerprintJS Pro JavaScript agent.",
   "scripts": {
     "build": "webpack -c webpack.config.js --mode production",
-    "zip": "yarn run build && cd build && zip -r ../build.zip *",
+    "zip": "pnpm build && cd build && zip -r ../build.zip *",
     "watch": "webpack -c webpack.config.js --watch --mode development",
     "release": "semantic-release",
     "release-dry": "semantic-release --dry-run",
-    "publish-to-store": "yarn run zip && node scripts/publish.mjs"
+    "publish-to-store": "pnpm zip && node scripts/publish.mjs"
   },
   "release": {
     "extends": "semantic-release-monorepo",
