build: use shared configs

--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/git": "^10.0.1",
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
+    "@fingerprintjs/commit-lint-dx-team": "^0.0.2",
+    "@fingerprintjs/conventional-changelog-dx-team": "^0.1.0",
+    "@fingerprintjs/eslint-config-dx-team": "^0.1.0",
+    "@fingerprintjs/prettier-config-dx-team": "^0.1.0",
+    "@fingerprintjs/tsconfig-dx-team": "^0.0.2",
     "@types/adm-zip": "^0.5.0",
     "@types/chrome": "0.0.181",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
@@ -37,20 +40,17 @@
     "copy-webpack-plugin": "^10.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.0.0",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.57.0",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
-    "prettier": "^2.8.8",
     "semantic-release": "19.0.3",
     "semantic-release-monorepo": "7.0.5",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.4.2",
-    "typescript": "5.0.4",
+    "typescript": "^5.4.3",
     "webpack": "5.76.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
