--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
+  "extends": "@fingerprintjs/tsconfig-dx-team/tsconfig.json",
   "compileOnSave": false,
   "compilerOptions": {
-    "strict": true,
     "outDir": "./lib",
     "sourceMap": true,
     "declaration": false,
@@ -18,7 +18,6 @@
     "skipLibCheck": true,
     "strictFunctionTypes": true,
     "skipDefaultLibCheck": true,
-    "resolveJsonModule": true,
     "baseUrl": ".",
     "types": ["node", "chrome"]
   },
