--- a/.github/workflows/publish-extension.yml
+++ b/.github/workflows/publish-extension.yml
@@ -14,7 +14,12 @@ jobs:
     if: ${{ github.event_name != 'release' || contains(github.ref, 'chrome-extension-v') }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@129abb77bf5884e578fcaf1f37628e41622cc371
+        with:
+          version: 8
 
       - name: Install dependencies
         run: pnpm install
