--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
         run: pnpm install && pnpm list
 
       - name: Setup playwright
-        run: pnpm upgrade --pattern playwright --pure-lockfile && npx playwright install-deps && pnpm exec playwright --version
+        run: pnpm add playwright@latest --lockfile-only && pnpm exec playwright install-deps && pnpm exec playwright --version
 
       - name: Create .env file
         run: |
