--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
         run: pnpm install && pnpm list
 
       - name: Setup playwright
-        run: pnpm add playwright@latest --lockfile-only && pnpm exec playwright install-deps && pnpm exec playwright --version
+        run: pnpm add playwright@latest -w --lockfile-only && pnpm exec playwright install-deps && pnpm exec playwright --version
 
       - name: Create .env file
         run: |
@@ -47,14 +47,14 @@ jobs:
 
       - name: Upload trace
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: Trace (OS ${{ matrix.os }})
           path: packages/chrome-extension-e2e/test-results
 
       - name: Upload Unit Test Results
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: Unit Test Results (OS ${{ matrix.os }})
           path: packages/chrome-extension-e2e/reports/report.xml
