--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
-    "@fingerprintjs/fingerprintjs-pro": "^3.8.1"
+    "@fingerprintjs/fingerprintjs-pro": "^3.8.1",
+    "tslib": "^2.6.2"
   },
   "config": {
     "commitizen": {
