--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs-pro": "^3.8.1",
+    "@types/node": "^20.11.30",
     "tslib": "^2.6.2"
   },
   "config": {
