--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fingerprintjs/eslint-config-dx-team": "^0.1.0",
     "@fingerprintjs/prettier-config-dx-team": "^0.1.0",
     "@fingerprintjs/tsconfig-dx-team": "^0.0.2",
+    "@playwright/test": "latest",
     "@types/adm-zip": "^0.5.0",
     "@types/chrome": "0.0.181",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
@@ -47,6 +48,7 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
     "husky": "^8.0.3",
+    "playwright": "latest",
     "lint-staged": "^13.2.2",
     "semantic-release": "19.0.3",
     "semantic-release-monorepo": "7.0.5",
