--- a/packages/chrome-extension-e2e/package.json
+++ b/packages/chrome-extension-e2e/package.json
@@ -4,12 +4,6 @@
   "private": true,
   "description": "Stores e2e tests for chrome extension;",
   "scripts": {
-    "e2e": "npx playwright test --headed"
-  },
-  "devDependencies": {
-    "@playwright/test": "latest",
-    "@types/node-fetch": "^2.6.1",
-    "node-fetch": "^2.6.7",
-    "playwright": "latest"
+    "e2e": "NODE_TLS_REJECT_UNAUTHORIZED=0 playwright test --headed"
   }
 }
