--- a/packages/chrome-extension-e2e/package.json
+++ b/packages/chrome-extension-e2e/package.json
@@ -4,6 +4,6 @@
   "private": true,
   "description": "Stores e2e tests for chrome extension;",
   "scripts": {
-    "e2e": "NODE_TLS_REJECT_UNAUTHORIZED=0 playwright test --headed"
+    "e2e": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 playwright test --headed"
   }
 }
