--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "dependencies": {
     "@fingerprintjs/fingerprintjs-pro": "^3.8.1",
     "@types/node": "^20.11.30",
+    "chrome-webstore-upload": "^1.0.0",
     "cross-env": "^7.0.3",
     "tslib": "^2.6.2"
   },
